Created basic layout of the homepage and cleaned the navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <title>ThyFund</title>
 </head>
 
-<body>
+<body class = "index-body">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav_styling">
         <div class="container-fluid">
@@ -34,7 +34,22 @@
         </div>
     </nav>
 
-    <p>Home page</p>
+    <div class="home-informational">
+        <div class ="left-informational">
+            <p>54% of Americans don't know their personal financial state<br>&nbsp;&nbsp;____</p>
+            <p>ThyFund allows you to keep track of your portfolio with ease; ensuring you aren't part of that statisctic. Keep track of:</p>
+            <ul class="finance-examples">
+                <li>Savings Accounts</li>
+                <li>Credit Cards</li>
+                <li>Investments</li>
+                <li>Liabilities</li>
+                <li>Etc.</li>
+            </ul>
+        </div>
+        <span class ="left-titling">
+            <h1>See the Truth.<br>Know your Finances.</h1>
+        </span>
+    </div>
     <!--CDN, etc.-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
