--- a/frontend/sign_in.html
+++ b/frontend/sign_in.html
@@ -8,7 +8,7 @@
     <title>ThyFund</title>
 </head>
 
-<body>
+<body class = "sign-body">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav_styling">
         <div class="container-fluid">
@@ -51,7 +51,7 @@
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">I understand this is intended as a showcase,<br> and not for real use</label>
+                <label class="form-check-label" for="exampleCheck1">I understand this is intended as a showcase, and not for real use</label>
             </div>
             <div class="sign_in_btn_container">
                 <button type="submit" class="btn btn-primary btn_customized">Submit</button>
